--- a/index.html
+++ b/index.html
@@ -2726,7 +2726,7 @@
                   class="opacity-0 absolute contractInput">
                 <p
                   class="relative ca_text ink-free_font text-[15px] md:text-[20px] xl:text-[32px] min-[1700px]:text-[30px] z-[1]">
-                  Contract : 0xfF...21F9</p>
+                  Contract : 0x35...3082</p>
                 <div class="icon ml-[.75rem] z-10">
                   <img src="images/copyIcon.svg" alt=""
                     class="h-auto object-contain w-[20px] md:w-[25px] lg:w-[30px] min-[1700px]:w-[1vw]">
@@ -3062,9 +3062,7 @@
 
     <div
       style="display: flex; flex-wrap: wrap; justify-content: center; gap: 20px; max-width: 1200px; margin: 0 auto; padding: 10px;">
-      <blockquote class="twitter-tweet"><p lang="en" dir="ltr">Just “America”, no acronyms</p>&mdash; Elon Musk (@elonmusk) <a href="https://twitter.com/elonmusk/status/1941615025527111746?ref_src=twsrc%5Etfw">July 5, 2025</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-
-      <blockquote class="twitter-tweet"><p lang="ca" dir="ltr">🇺🇸🇺🇸🇺🇸 AMERICA 🇺🇸🇺🇸🇺🇸</p>&mdash; Elon Musk (@elonmusk) <a href="https://twitter.com/elonmusk/status/1941615863423172853?ref_src=twsrc%5Etfw">July 5, 2025</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+      <blockquote class="twitter-tweet"><p lang="en" dir="ltr">Just “$TP”, no acronyms</p>&mdash; Trump <a href="https://twitter.com/bwenews/status/1983149171508162932?ref_src=twsrc%5Etfw">October 28, 2025</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
     </div>
 
     <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
@@ -3270,11 +3268,11 @@
       <!-- social media -->
       <div class="social_footer z_99" data-aos="fade-up" data-aos-duration="500" data-aos-delay="400">
 
-        <a href="https://www.dextools.io/app/en/ether/pair-explorer/0xcomingsoon"
+        <a href="https://www.dextools.io/app/en/ether/pair-explorer/0x353448a2495c8940dcefe11c15b0615ae8a83082"
           target="_blank">
           <img src="images/dextoolsIcon.png" alt="">
         </a>
-        <a href="https://dexscreener.com/ethereum/0xcomingsoon" target="_blank">
+        <a href="https://dexscreener.com/ethereum/0x353448a2495c8940dcefe11c15b0615ae8a83082" target="_blank">
           <img src="/dex-screener-logo-png_seeklogo-527276-removebg-preview.png" alt="">
         </a>
 
@@ -3286,7 +3284,7 @@
           <img src="images/telegram_footer.svg" alt="">
         </a> 
 
-        <a href="https://etherscan.io/address/0xcomingsoon" target="_blank">
+        <a href="https://etherscan.io/address/0x353448a2495c8940dcefe11c15b0615ae8a83082" target="_blank">
           <img src="images/etherscan.png" alt="">
         </a>
 
